--- a/BlackJackFX/src/blackjackfx/GameScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/GameScreen.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.*?>
 <?scenebuilder-stylesheet resources/CSS/gamescreen.css?>
 
-<AnchorPane id="AnchorPane" minHeight="657.0" minWidth="991.0" prefHeight="683.0" prefWidth="999.999977929685" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml" fx:controller="blackjackfx.Controllers.GameScreenController">
+<AnchorPane id="AnchorPane" minHeight="657.0" minWidth="991.0" prefHeight="683.0" prefWidth="999.999977929685" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.GameScreenController">
   <children>
     <Label fx:id="lblPlayerEndRound" layoutX="447.0" layoutY="283.0" prefHeight="57.0" prefWidth="111.0" text="Label" textFill="WHITE">
       <font>
@@ -22,7 +22,15 @@
         <Image url="@resources/Images/Background/premium_classic_bj_ss123.png" preserveRatio="true" smooth="true" />
       </image>
     </ImageView>
-    <Pane id="pDealerPane" fx:id="PDealerPane" layoutX="628.0" layoutY="61.0" prefHeight="75.0" prefWidth="70.0" />
+    <Pane id="pDealerPane" fx:id="PDealerPane" layoutX="628.0" layoutY="61.0" prefHeight="75.0" prefWidth="70.0">
+      <children>
+        <ImageView fitHeight="63.887168066408776" fitWidth="85.18288821208417" layoutX="2.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+          <image>
+            <Image url="@resources/Images/players/Dealer.png" />
+          </image>
+        </ImageView>
+      </children>
+    </Pane>
     <Button fx:id="btnStartRound" layoutX="44.0" layoutY="2.0" mnemonicParsing="false" onAction="#StartRound" prefHeight="24.0" prefWidth="100.0" text="Start Round" />
     <Button fx:id="btnDouble" layoutX="479.0" layoutY="283.0" mnemonicParsing="false" onAction="#DoublePress" text="Double" />
     <Button fx:id="btnHit" layoutX="481.0" layoutY="324.0" mnemonicParsing="false" onAction="#HitPress" prefWidth="59.0" text="Hit" />
