--- a/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/LoginScreen.fxml
+++ b/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/LoginScreen.fxml
@@ -7,13 +7,16 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="188.0" prefWidth="287.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.LoginScreenController">
+<AnchorPane id="AnchorPane" prefHeight="205.0" prefWidth="306.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.LoginScreenController">
   <children>
     <Label layoutX="22.0" layoutY="30.0" text="Server Name" />
-    <TextField fx:id="txtServerName" layoutX="90.0" layoutY="27.0" prefWidth="158.0" />
+    <TextField fx:id="txtServerName" layoutX="116.0" layoutY="27.0" prefWidth="158.0" />
     <Label layoutX="22.0" layoutY="57.0" text="Server Port" />
-    <TextField fx:id="txtPortValue" layoutX="90.0" layoutY="54.0" prefWidth="158.0" />
-    <Button fx:id="Connect" layoutX="14.0" layoutY="112.0" mnemonicParsing="false" onAction="#ConnectToServer" prefHeight="62.0" prefWidth="259.0" text="Connect" />
+    <TextField fx:id="txtPortValue" layoutX="116.0" layoutY="54.0" prefWidth="158.0" />
+    <Button fx:id="Connect" layoutX="91.0" layoutY="128.0" mnemonicParsing="false" onAction="#ConnectToServer" prefHeight="39.0" prefWidth="129.5" text="Connect" />
     <Label fx:id="ErrorDisplay" layoutX="22.0" layoutY="86.0" prefWidth="237.0" text="" />
   </children>
+  <stylesheets>
+    <URL value="@resources/CSS/loginscreen.css" />
+  </stylesheets>
 </AnchorPane>
