--- a/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/WaitingGames.fxml
+++ b/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/WaitingGames.fxml
@@ -9,7 +9,12 @@
 
 <AnchorPane id="AnchorPane" prefHeight="399.9998558593725" prefWidth="472.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.WaitingGamesController">
   <children>
-    <TableView fx:id="WaitinGamesView" editable="false" layoutX="0.0" layoutY="0.0" prefHeight="400.0" prefWidth="472.0" tableMenuButtonVisible="false" />
+    <TableView fx:id="WaitinGamesView" editable="false" layoutX="0.0" layoutY="0.0" prefHeight="356.0" prefWidth="472.0000999999975" tableMenuButtonVisible="false" />
+    <TableView id="WaitinGamesView" fx:id="PlayersJoined" editable="false" layoutX="0.0" layoutY="0.0" prefHeight="356.0" prefWidth="472.0000999999975" tableMenuButtonVisible="false" visible="false" />
+    <Label layoutX="14.0" layoutY="371.0" text="Player Name" />
+    <TextField fx:id="txtPlayerName" disable="true" layoutX="88.0" layoutY="367.0" prefWidth="118.0" />
+    <Button fx:id="btnJoin" disable="true" layoutX="217.0" layoutY="368.0" mnemonicParsing="false" onAction="#JoinToTheGame" text="Join" />
+    <Button fx:id="BackToWait" disable="true" layoutX="402.0" layoutY="369.0" mnemonicParsing="false" onAction="#GoToWaiting" text="Back" />
   </children>
   <stylesheets>
     <URL value="@resources/CSS/waitinggames.css" />
