--- a/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/GameScreen.fxml
+++ b/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/GameScreen.fxml
@@ -10,13 +10,8 @@
 <?import javafx.scene.text.*?>
 <?scenebuilder-stylesheet resources/CSS/gamescreen.css?>
 
-<AnchorPane id="AnchorPane" minHeight="657.0" minWidth="991.0" prefHeight="683.0" prefWidth="999.999977929685" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.GameScreenController">
+<AnchorPane id="AnchorPane" minHeight="657.0" minWidth="991.0" prefHeight="683.0" prefWidth="999.999977929685" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml"  fx:controller="blackjackfx.Controllers.GameScreenController">
   <children>
-    <Label fx:id="lblPlayerEndRound" layoutX="447.0" layoutY="283.0" prefHeight="57.0" prefWidth="111.0" text="Label" textFill="WHITE">
-      <font>
-        <Font size="14.0" />
-      </font>
-    </Label>
     <ImageView id="" fitHeight="682.0" fitWidth="1001.0" layoutX="-1.0" layoutY="1.0">
       <image>
         <Image url="@resources/Images/Background/premium_classic_bj_ss123.png" preserveRatio="true" smooth="true" />
@@ -31,7 +26,7 @@
         </ImageView>
       </children>
     </Pane>
-    <Button fx:id="btnStartRound" layoutX="44.0" layoutY="2.0" mnemonicParsing="false" onAction="#StartRound" prefHeight="24.0" prefWidth="100.0" text="Start Round" />
+    <Button id="btnResign" fx:id="btnRResign" layoutX="44.0" layoutY="2.0" mnemonicParsing="false" onAction="#Resign" prefHeight="29.0" prefWidth="111.0" text="Resign" />
     <Button fx:id="btnDouble" layoutX="479.0" layoutY="283.0" mnemonicParsing="false" onAction="#DoublePress" text="Double" />
     <Button fx:id="btnHit" layoutX="481.0" layoutY="324.0" mnemonicParsing="false" onAction="#HitPress" prefWidth="59.0" text="Hit" />
     <Button fx:id="btnSplit" layoutX="482.0" layoutY="370.0" mnemonicParsing="false" onAction="#SplitPress" prefWidth="59.000099999997474" text="Split" />
@@ -134,8 +129,6 @@
     </AnchorPane>
     <Label fx:id="MsgLable" layoutX="67.0" layoutY="58.0" prefHeight="25.0" prefWidth="444.0" text="" />
     <HBox fx:id="vbxDealerHand" layoutX="369.0" layoutY="89.0" prefHeight="71.0" prefWidth="276.0" />
-    <Button fx:id="btnPlayerContinue" layoutX="439.0" layoutY="350.0" mnemonicParsing="false" onAction="#PlayerContGame" text="Continue Game" />
-    <Button fx:id="btnPlayerExit" layoutX="473.0" layoutY="380.0" mnemonicParsing="false" onAction="#PlayerExitGame" text="Exit" />
     <Pane fx:id="pDeckPlace1" layoutX="780.0" layoutY="8.0" prefHeight="103.0" prefWidth="78.0" rotate="118.0" />
     <Pane fx:id="pDeckPlace2" layoutX="782.0" layoutY="8.0" prefHeight="103.0" prefWidth="78.0" rotate="118.0" />
     <Pane fx:id="pDeckPlace3" layoutX="781.0" layoutY="7.0" prefHeight="103.0" prefWidth="78.0" rotate="118.0" />
