--- a/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/resources/CSS/waitinggames.css
+++ b/BlackJackClientServer/BlackJackFXClient/src/blackjackfx/resources/CSS/waitinggames.css
@@ -11,3 +11,26 @@
     -fx-font-size: 20 px;
     
 }
+
+.button {
+    -fx-text-fill: white;
+    -fx-font-family: "Arial Narrow";
+    -fx-font-size: 14 px;
+    -fx-background-color: linear-gradient(#cc9900,#cc6600);
+    -fx-effect: dropshadow(one-pass-box, black, 8, 0, 2, 2);
+}
+
+.button:hover{
+ -fx-background-color: linear-gradient(#cc6600,#cc9900);   
+}
+#AnchorPane{
+    -fx-background-image: url('/blackjackfx/resources/Images/Background/bj_background.jpg');
+}
+
+#PlayerName{
+    -fx-font-family :"serif";
+    -fx-font-weight: bold;
+    -fx-font-size: 16 px;
+   -fx-text-fill: white;
+    
+}
